--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "express-session": "^1.17.1",
     "express-validator": "^6.10.1",
     "mongoose": "^5.12.5",
+    "nanoid": "^3.1.23",
     "path": "^0.12.7",
     "sass": "^1.32.11"
   }
