--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "express-session": "^1.17.1",
     "express-validator": "^6.10.1",
     "fs": "0.0.1-security",
+    "git": "^0.1.5",
     "mongoose": "^5.12.5",
     "multer": "^1.4.2",
     "nanoid": "^3.1.23",
