--- a/package.json
+++ b/package.json
@@ -7,6 +7,10 @@
     "start": "node index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "engines" : {
+    "node" : "15.10.0",
+    "npm" : "7.6.0"
+  },
   "keywords": [],
   "author": "",
   "license": "ISC",
